Explanation upto board

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="toolbar">
-        <div class="cross">Cross</div>
+        <div class="cross">cross</div>
         <div class="toolbar-options">
             <div class="tool" id="pencil">
                 <img src="./NewIcons/Black_Pencil.svg" class="tool-img" alt="">
