--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -36,6 +36,7 @@
         </div>
         <input type="file" class="input-tag">
     </div>
+    <script src="/tools.js"></script>
     <!-- canvas -> that will help you to draw on 
     a webpage
     -->
