--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
         <div class="cross">cross</div>
         <div class="toolbar-options">
             <div class="tool" id="pencil">
-                <img src="./NewIcons/Black_Pencil.svg" class="tool-img" alt="">
+                <img src="./Newicons/Black_Pencil.svg" class="tool-img" alt="">
             </div>
             <div class="tool" id="eraser">
-                <img src="./NewIcons/Eraser.svg" class="tool-img" alt="">
+                <img src="./Newicons/Eraser.svg" class="tool-img" alt="">
             </div>
             <div class="tool" id="sticky">
-                <img src="./NewIcons/StickyNote.svg" class="tool-img" alt="">
+                <img src="./Newicons/StickyNote.svg" class="tool-img" alt="">
             </div>
             <div class="tool" id="upload">
-                <img src="./NewIcons/Photo.svg" alt="" class="tool-img">
+                <img src="./Newicons/Photo.svg" alt="" class="tool-img">
             </div>
             <div class="tool" id="download">
-                <img src="./NewIcons/Download.svg" alt="" class="tool-img">
+                <img src="./Newicons/Download.svg" alt="" class="tool-img">
             </div>
             <div class="tool" id="undo">
-                <img src="./NewIcons/Undo.svg" alt="" class="tool-img">
+                <img src="./Newicons/Undo.svg" alt="" class="tool-img">
             </div>
             <div class="tool" id="redo">
-                <img src="./NewIcons/Redo.svg" alt="" class="tool-img">
+                <img src="./Newicons/Redo.svg" alt="" class="tool-img">
             </div>
         </div>
         <input type="file" class="input-tag">
